Fix delete icon alignment

--- a/assets/ascent-fileupload.css
+++ b/assets/ascent-fileupload.css
@@ -105,6 +105,10 @@
     z-index: 11;
 }
 
+.fileupload .fileupload-reset:before {
+    margin: 0 !important;
+}
+
 .fileupload.has-file .fileupload-reset {
     display: flex; 
     justify-content: center;
